Modificación login medicos
Se cambió la validacion del type user desde medicos a derivadores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <meta content="no" name="msapplication-tap-highlight">
                     <meta content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. " name="description">
                         <title>
-                            Adminn
+                            Admin
                         </title>
                         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
                         </script>
